selfhost/test/typechecker/if/error_unfilled_holes_bindingdecl.2.out
Error at %FILE_NAME%:1:9
Could not determine type for assignment
  |  val a = if true { Option.None_ } else { Option.None_ }
             ^
Type '<unknown>?' has unfilled holes. Please use an explicit type annotation to denote the type
