selfhost/test/typechecker/if/error_unfilled_holes_bindingdecl.2.abra
val a = if true { Option.None_ } else { Option.None_ }